--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 100px;
+  min-width:1000px;
+
 
 
 }
@@ -36,6 +38,9 @@
   grid-column-end: 12;
   margin-right: 150px;
   padding-bottom: 100px;
+  min-width: 600px;
+  max-width: 700px;
+
 
 
 
@@ -110,12 +115,7 @@ h1{
 
 
 
-  body {
-      min-width:1000px;
-      
 
-
-  }
 
 
 
