--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@
   grid-gap: 6px;
   grid-template-rows: 40px 200px 40px;
   grid-template-columns: repeat(3, 1fr);
-  width: auto;
-
+  min-width: 1200px;
 }
 
 #header{
@@ -16,7 +15,7 @@
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 100px;
-
+  min-width: 900px;
 
 
 
@@ -41,7 +40,7 @@
   grid-column-end: 12;
   margin-right: 150px;
   padding-bottom: 100px;
-
+  min-width: 500px;
 
 
 
@@ -53,7 +52,6 @@
 .flex-container{
   display: flex;
   justify-content: center;
-
 }
 
 #box1{
