--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@
   padding-right: 20px;
   padding-left: 20px;
   box-shadow: 5px 5px 5px gray;
+  float: left;
 }
 #sidehr{
   border-color:black;
